--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,35 @@
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+*.so
+
+*.log
+*.logfiles
+*.pid
+*.ini
+*.pprof
+*.mprof
+*.out
+
+*.sublime-project
+*.sublime-workspace
+.vscode
+
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
-*.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, build with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+*.wasm
+core
+*_gen.go 
+*_gen_test.go
+.*~
+*~
+*.map
+bin/*
